# minui

./: README.md  build.gradle  settings.gradle
core/: build.gradle  build.gradle.kts
core/src/examples/kotlin/: E1_SimpleWindow.kt  E2_Clipboard.kt  E3_NativePopupMenu.kt  E4_TransparentWindow.kt  Main.kt
core/src/test/kotlin/: FontTest.kt  FrameTest.kt  ImageTest.kt  NativePopupTest.kt
core/src/test/kotlin/examples/: E1_SimpleWindow.kt  E2_Clipboard.kt  E3_NativePopupMenu.kt  E4_TransparentWindow.kt  Main.kt
native/: CMakeLists.txt
native/base/: base.sln  base.vcxproj  base.vcxproj.filters  minui-base.sln  packages.config
native/base/src/: freetype.cpp  freetype.h  harfbuzz.cpp  harfbuzz.h  stdafx.h
native/base/src/harfbuzz/: hb-ft.cc
native/pipelines/gl/: gl.sln  gl.vcxproj  gl.vcxproj.filters
native/pipelines/gl/libs/: glfw3_arm64.lib  glfw3_x64.lib  glfw3_x86.lib
native/pipelines/gl/src/: gl.cpp  gl.h  glPipeline.cpp  glPipeline.h  glPipelineWin.cpp  glPipelineWin.h  wglext.h
native/pipelines/gl/src/glfw/: internal.h
native/src/: win.c  win.h
native/win/: CMakeLists.txt  minui-win.sln  win.vcxproj  win.vcxproj.filters
native/win/src/: base.cpp  base.h  clipboard.cpp  notification.cpp  notification.h  popup_menu.cpp  popup_menu.h  registry.cpp  registry.h  toast.cpp  window.cpp  window.h  windowManager.cpp  windowManager.h
native/win/win/: DesktopNotificationManagerCompat.cpp  base.cpp  clipboard.cpp  notification.cpp  popup_menu.cpp  registry.cpp  test.cpp  toast.cpp  win.vcxproj  win.vcxproj.filters  window.cpp
(+145 files in other folders)
